--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,13 @@
 DB_URL = 'mongodb://127.0.0.1:27017/website-analytics'
 
+# DB_URL = 'mongodb+srv://amaykorade5:mbgtcjKsWUiLwJVd@web-analytics.a52tz.mongodb.net/?retryWrites=true&w=majority&appName=web-analytics'
+
 JWT_SECRET_BACKEND='AIb6d35fvJM4O9pXqXQNla2jBCH9kuLz'
+
+
+
+# ************* ---atlas credentials--- *******************
+# username : amaykorade5
+# pass : mbgtcjKsWUiLwJVd
+
+# connection string : mongodb+srv://amaykorade5:mbgtcjKsWUiLwJVd@web-analytics.a52tz.mongodb.net/?retryWrites=true&w=majority&appName=web-analytics
