--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-DB_URL = 'mongodb://127.0.0.1:27017/website-analytics'
+# DB_URL = 'mongodb://127.0.0.1:27017/website-analytics'
 
-# DB_URL = 'mongodb+srv://amaykorade5:mbgtcjKsWUiLwJVd@web-analytics.a52tz.mongodb.net/?retryWrites=true&w=majority&appName=web-analytics'
+DB_URL = 'mongodb+srv://amaykorade5:mbgtcjKsWUiLwJVd@web-analytics.a52tz.mongodb.net/?retryWrites=true&w=majority&appName=web-analytics'
 
 JWT_SECRET_BACKEND='AIb6d35fvJM4O9pXqXQNla2jBCH9kuLz'
 
