--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "express-rate-limit": "^7.5.0",
     "geoip-lite": "^1.4.10",
     "helmet": "^8.0.0",
+    "i18n-iso-countries": "^7.14.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "path": "^0.12.7",
