--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-simple-maps": "^3.0.0",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.0",
     "ua-parser-js": "^2.0.1"
   },
