--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "i18n-iso-countries": "^7.14.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "nodemailer": "^6.10.0",
     "path": "^0.12.7",
     "ua-parser-js": "^2.0.1"
   },
