--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,10 @@ DB_URL = 'mongodb+srv://amaykorade5:mbgtcjKsWUiLwJVd@web-analytics.a52tz.mongodb
 # DB_URL = "mongodb+srv://amaykorade5:mbgtcjKsWUiLwJVd@web-analytics.a52tz.mongodb.net/?retryWrites=true&w=majority&tls=true&tlsAllowInvalidCertificates=true&appName=web-analytics"
 
 JWT_SECRET_BACKEND='AIb6d35fvJM4O9pXqXQNla2jBCH9kuLz'
+
+EMAIL= 'contact@webmeter.in'
+EMAIL_PASS='amay@2020'
+
 # JWT_SECRET_BACKEND="AIb6d35fvJM4O9pXqXQNla2jBCH9kuLz"
 
 
