Fixed the secret key leakage

--- a/backend/.env
+++ b/backend/.env
@@ -3,10 +3,10 @@
 DB_URL = 'mongodb+srv://amaykorade5:mbgtcjKsWUiLwJVd@web-analytics.a52tz.mongodb.net/?retryWrites=true&w=majority&tls=true&tlsAllowInvalidCertificates=true&appName=web-analytics'
 # DB_URL = "mongodb+srv://amaykorade5:mbgtcjKsWUiLwJVd@web-analytics.a52tz.mongodb.net/?retryWrites=true&w=majority&tls=true&tlsAllowInvalidCertificates=true&appName=web-analytics"
 
-JWT_SECRET_BACKEND='AIb6d35fvJM4O9pXqXQNla2jBCH9kuLz'
+JWT_SECRET='AIb6d35fvJM4O9pXqXQNla2jBCH9kuLz'
 
 EMAIL= 'contact@webmeter.in'
-EMAIL_PASS='amay@2020'
+EMAIL_PASS='Amay@2020'
 
 # JWT_SECRET_BACKEND="AIb6d35fvJM4O9pXqXQNla2jBCH9kuLz"
 
