--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,17 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-json": "^1.0.0",
     "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
     "geoip-lite": "^1.4.10",
     "helmet": "^8.0.0",
     "i18n-iso-countries": "^7.14.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "nodemailer": "^6.10.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "ua-parser-js": "^2.0.1"
   },
