Added signup and login using google

--- a/backend/.env
+++ b/backend/.env
@@ -8,9 +8,10 @@ JWT_SECRET='AIb6d35fvJM4O9pXqXQNla2jBCH9kuLz'
 EMAIL= 'contact@webmeter.in'
 EMAIL_PASS='Amay@2020'
 
-# JWT_SECRET_BACKEND="AIb6d35fvJM4O9pXqXQNla2jBCH9kuLz"
-
-
+# ************ google o auth *************
+GOOGLE_CLIENT_ID='1011887272000-ipg2e9r83ac1jkji684gb51ci9rd7ju1.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET='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'
+SESSION_SECRET='BIb6k35fvJM4O9lXqXQNla2jZCH9kmnY'
 
 # ************* ---atlas credentials--- *******************
 # username : amaykorade5
