Added razorpay domestic service

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "razorpay": "^2.9.6",
-    "ua-parser-js": "^2.0.1"
+    "ua-parser-js": "^2.0.1",
+    "uuid": "^11.1.0"
   },
   "name": "website-analytics",
   "version": "1.0.0",
