--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -15,9 +15,11 @@
     "@tailwindcss/vite": "^4.0.0",
     "antd": "^5.23.4",
     "axios": "^1.7.9",
+    "cashfree-dropjs": "^1.1.5",
     "chart.js": "^4.4.7",
     "d3-geo": "^3.1.1",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
