--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1",
     "ua-parser-js": "^2.0.1",
     "uuid": "^11.1.0"
   },
